fixed buttons overlapping body padding

--- a/styles/form-page.css
+++ b/styles/form-page.css
@@ -29,4 +29,4 @@
 .col-dob { width: 150px; }
 .col-email { width: 300px; }
 .col-gender { width: 200px; }
-.col-country { width: 200px; }
+.col-country { width: 195px; }
